--- a/demo/leeme.html
+++ b/demo/leeme.html
@@ -67,8 +67,8 @@
                 de wikipedia para
                 termómetro</a>, con licencia <a
                 href="https://en.wikipedia.org/wiki/Thermometer#/media/File:Backofenthermometer.jpg">CC BY-SA 3.0</a>.
-        <li>Logotipos de las vistas busquedaPropuestas y profileSearch no incluidos a espera de ver qué se hace con el tema de licencias al tratarse de imágenes de marcas. Igualmente se han añadido
-            dichos recursos a la carpeta static/img.
+        <li>Logotipos de las vistas busquedaPropuestas y profileSearch no incluidos a espera de ver qué se hace con el tema de licencias 
+            al tratarse de imágenes de marcas. A pesar de esto se han añadido dichos recursos a la carpeta static/img.
     </ul>
     
 </body>
