Imagenes de negociacion y fincampaña cambiado

--- a/demo/leeme.html
+++ b/demo/leeme.html
@@ -61,13 +61,11 @@
 
     <h2>Recursos</h2>
     <ul>
-        <li><a href="src/main/resources/static/img/logo.png" />Logotipo, obtenido de la
-            <a
-                href="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6d/Backofenthermometer.jpg/170px-Backofenthermometer.jpg">entrada
-                de wikipedia para
-                termómetro</a>, con licencia <a
-                href="https://en.wikipedia.org/wiki/Thermometer#/media/File:Backofenthermometer.jpg">CC BY-SA 3.0</a>.
-        <li>Logotipos de las vistas busquedaPropuestas y profileSearch no incluidos a espera de ver qué se hace con el tema de licencias 
+<li><a href="src/main/resources/static/img/perfilIcon.svg"> Icono de imagen de perfil </a>, obtenido de la  <a href="https://www.flaticon.com/free-icon/user-avatar_16363"> página </a> con licencia <a href="https://profile.flaticon.com/license/free">Flaticon</a>
+<li><a href="src/main/resources/static/img/rechazar.png"> Imagen de aceptar propuesta </a>, obtenido de la  <a href="https://pixabay.com/es/illustrations/confirmar-aceptar-web-icono-1174801/"> página </a> con licencia <a href="https://pixabay.com/es/service/license/">Pixabay</a>
+<li><a href="src/main/resources/static/img/rechazar.png"> Imagen de rechazar propuesta </a>, obtenido de la  <a href="https://pixabay.com/es/vectors/cancelar-denegado-eliminar-148744/"> página </a> con licencia <a href="https://pixabay.com/es/service/license/">Pixabay</a>
+
+           <li>Logotipos de las vistas busquedaPropuestas y profileSearch no incluidos a espera de ver qué se hace con el tema de licencias 
             al tratarse de imágenes de marcas. A pesar de esto se han añadido dichos recursos a la carpeta static/img.
     </ul>
     
