añadido diagrama modelo

--- a/demo/leeme.html
+++ b/demo/leeme.html
@@ -59,6 +59,9 @@
             patrocinio de una propuesta.
     </ul>
 
+	<h2>Modelo del dominio</h2>
+	<img src="Modelo.png">
+
     <h2>Recursos</h2>
     <ul>
 <li><a href="src/main/resources/static/img/perfilIcon.svg"> Icono de imagen de perfil </a>, obtenido de la  <a href="https://www.flaticon.com/free-icon/user-avatar_16363"> página </a> con licencia <a href="https://profile.flaticon.com/license/free">Flaticon</a>
