--- a/leeme.html
+++ b/leeme.html
@@ -4,11 +4,6 @@
 <head>
     <meta charset="utf-8">
     <title>Influencing</title>
-    <style type="text/css">
-        .nota {
-            color: gray;
-        }
-    </style>
 </head>
 
 <body>
@@ -19,14 +14,16 @@
         productos dentro de una cuota de mercado que tengan prefijada con influencers que tengan
         perfiles en redes sociales relacionados con el público a los que se quiere hacer llegar esos
         productos.
-
+    </p>
+    <p>
         Los usuarios de la aplicación serán las <b>empresas</b> y los <b>influencers</b>. Una vez registrados en la
         aplicación, las empresas pueden filtrar sus búsquedas de perfiles a través de distintos tags que
         referencien a su marca/producto. A su vez, los influencers deben incluir en su perfil sus
         canales de comunicación para que se pueda confirmar su capacidad de difusión (RRSS). También se
         permite que las empresas realicen ofertas públicas para que los influencers se ofrezcan como
         posibles patrocinadores.
-
+    </p>
+    <p>
         La aplicación tendrá un chat para que las empresas puedan negociar sus patrocinios, así como
         un rating de referencias para ambos tipos de usuarios.
         También existirá el rol de <b>administrador</b> para moderar el tipo de propuestas y perfiles que se
@@ -40,19 +37,25 @@
         Las diferentes paginas en las que se puede navegar a traves de la navbar.
     </p>
     <ul>
-        <li><a href="http://localhost:8080/login">LOGIN</a> - vista para entrar en la pagina o registrarse.
+        <li><a href="http://localhost:8080/login">LOGIN</a> - vista para entrar en la pagina o registrarse.</li>
         <li><a href="http://localhost:8080/inicio">INICIO</a> - vista inicial. Ofrece un resumen general de la actividad
-            de la pagina, con atajos rapidos de panel de control (crear propuestas en el caso de las empresas).
-        <li><a href="http://localhost:8080/admin">ADMINISTRACIÓN</a> - vista de administrador. Permite administrar empresas,
-            influencers, propuestas y denuncias.
-        <li><a href="http://localhost:8080/busquedaPerfil">BÚSQUEDA DE PERFILES</a> - vista de empresa y usuario. Permite
-            buscar perfiles por distintos criterios y muestra un resumen de la información básica del perfil.
-        <li><a href="http://localhost:8080/busquedaPropuesta">BÚSQUEDA DE PROPUESTAS</a> - vista de empresa y usuario. Permite
+            de la pagina, con atajos rapidos de panel de control (crear propuestas en el caso de las empresas).</li>
+        <li><a href="http://localhost:8080/admin">ADMINISTRACIÓN</a> - vista de administrador. Permite administrar
+            empresas,
+            influencers, propuestas y denuncias.</li>
+        <li><a href="http://localhost:8080/busquedaPerfil">BÚSQUEDA DE PERFILES</a> - vista de empresa e influencer.
+            Permite
+            buscar perfiles por distintos criterios y muestra un resumen de la información básica del perfil.</li>
+        <li><a href="http://localhost:8080/busquedaPropuesta">BÚSQUEDA DE PROPUESTAS</a> - vista de empresa e
+            influencer. Permite
             buscar propuestas por distintos criterios y muestra un resumen de la información básica de la propuesta.
-        <li><a href="http://localhost:8080/negociacion">CHAT DE NEGOCIACIÓN</a> - vista de empresa y usuario.
-            Permite negociar una propuesta de patrocinio a traves de un chat en tiepo real y aceptarla/declinarla a traves de un ultimatum.
-        <li><a href="http://localhost:8080/contrataciones">CONTRATACIONES</a> - vista de empresa y usuario.
+        </li>
+        <li><a href="http://localhost:8080/negociacion">CHAT DE NEGOCIACIÓN</a> - vista de empresa e influencer.
+            Permite negociar una propuesta de patrocinio a traves de un chat en tiepo real y aceptarla/declinarla a
+            traves de un ultimatum.</li>
+        <li><a href="http://localhost:8080/contrataciones">CONTRATACIONES</a> - vista de empresa e influencer.
             Permite ver el estado y detalles de las contrataciones realizadas con los usuarios y permite valorarlos.
+        </li>
     </ul>
 
     <h2>Modals (sin ruta propia)</h2>
@@ -60,28 +63,36 @@
         Las diferentes paginas que se superponen a la vista para editar, ver o crear nuevas entidades en la pagina.
     </p>
     <ul>
-        <li><a href="">PERFIL</a> - vista de empresa y usuario. Permite ver la información del perfil y editarla en caso
-            de ser la del usuario logueado.
-        <li><a href="">PROPUESTA</a> - vista de empresa. Permite publicar/editar una propuesta.+
-        <li><a href="">DENUNCIA</a> - vista de empresa. Permite publicar/editar una propuesta.
-        <li><a href="">NOTIFICACIONES</a> - vista de empresa y usuario. Permite ver las notificaciones relacionadase con
-            el perfil logueado, marcarlas como leídas o borrarlas.
-        <li><a href="">VALORACIÓN</a> - vista de empresa y usuario. Permite subir una valoración al finalizar la contratacion 
-            de una propuesta.
+        <li><a href="">PERFIL</a> - vista de empresa e influencer. Permite ver la información del perfil y editarla en
+            caso
+            de ser la del usuario logueado.</li>
+        <li><a href="">PROPUESTA</a> - vista de empresa. Permite publicar/editar una propuesta.</li>
+        <li><a href="">DENUNCIA</a> - vista de empresa e influencer. Permite poner una denuncia a un usuario.</li>
+        <li><a href="">NOTIFICACIONES</a> - vista de empresa e influencer. Permite ver las notificaciones relacionadase
+            con
+            el perfil logueado, marcarlas como leídas o borrarlas.</li>
+        <li><a href="">VALORACIÓN</a> - vista de empresa e influencer. Permite subir una valoración al finalizar la
+            contratacion
+            de una propuesta.</li>
     </ul>
 
-	<h2>Modelo del dominio</h2>
-	<img src="Modelo.png">
+    <h2>Modelo del dominio</h2>
+    <img src="Modelo.png">
 
     <h2>Recursos</h2>
     <ul>
-        <li><a href="src/main/resources/static/img/perfilIcon.svg"> Icono de imagen de perfil </a>, obtenido de la  
-            <a href="https://www.flaticon.com/free-icon/user-avatar_16363"> página </a>con licencia <a href="https://profile.flaticon.com/license/free">Flaticon</a>
-
-        <li>Logotipos de las vistas busquedaPropuestas y profileSearch no incluidos a espera de ver qué se hace con el tema de licencias 
-            al tratarse de imágenes de marcas. A pesar de esto se han añadido dichos recursos a la carpeta static/img.
+        <li>Icono pagina: <a href="src/main/resources/static/img/icon.png">icon.png</a> obtenidos de la <a href="https://www.flaticon.com/free-icon/conversation_2892431">Trending Topic free icon</a>
+            con licencia <a href="https://profile.flaticon.com/license/free"> Flaticon</a>
+        </li>
+        <li>Iconos RRSS: <a href="src/main/resources/static/img/facebook.png">facebook.png<a>, <a href="src/main/resources/static/img/instagram.png">instagram.png</a>, 
+            <a href="src/main/resources/static/img/twitter.png">twitter.png</a> y <a href="src/main/resources/static/img/youtube.png">youtube.png</a> obtenidos del pack de iconos
+            <a href="https://www.flaticon.com/packs/social-media-icons"> Social Media Icons</a> con licencia
+            <a href="https://profile.flaticon.com/license/free"> Flaticon</a>
+        </li>
+        <li>Imagen de propuesta: imagen por defecto de una propuesta, <a href="src/main/resources/static/img/propuesta.png">propuesta.png</a></li>
+        <li>Imagen de perfil: imagen por defecto de un perfil, <a href="src/main/resources/static/img/profile.png">profile.png</a></li>
     </ul>
-    
+
 </body>
 
 </html>
