Ultimos cambios pre-examen

--- a/leeme.html
+++ b/leeme.html
@@ -40,7 +40,7 @@
         <li><a href="http://localhost:8080/login">LOGIN</a> - vista para entrar en la pagina o registrarse.</li>
         <li><a href="http://localhost:8080/inicio">INICIO</a> - vista inicial. Ofrece un resumen general de la actividad
             de la pagina, con atajos rapidos de panel de control (crear propuestas en el caso de las empresas).</li>
-        <li><a href="http://localhost:8080/admin">ADMINISTRACIÓN</a> - vista de administrador. Permite administrar
+        <li><a href="http://localhost:8080/administracion">ADMINISTRACIÓN</a> - vista de administrador. Permite administrar
             empresas,
             influencers, propuestas y denuncias.</li>
         <li><a href="http://localhost:8080/busquedaPerfil">BÚSQUEDA DE PERFILES</a> - vista de empresa e influencer.
@@ -91,6 +91,8 @@
         </li>
         <li>Imagen de propuesta: imagen por defecto de una propuesta, <a href="src/main/resources/static/img/propuesta.png">propuesta.png</a></li>
         <li>Imagen de perfil: imagen por defecto de un perfil, <a href="src/main/resources/static/img/profile.png">profile.png</a></li>
+        <li>Fuentes extraídas de <a href="https://github.com/FortAwesome/Font-Awesome">Font-Awesome</a> con licencia <a href="https://fontawesome.com/license">Font Awesome Pro License</a></li>
+
     </ul>
 
 </body>
