--- a/leeme.html
+++ b/leeme.html
@@ -8,6 +8,22 @@
 
 <body>
     <h1>Influencing</h1>
+	<h2>Autores</h2>
+    <ul>
+		<li>
+			Carlos López de la Torre Ortego
+		</li>
+		<li>
+			Ignacio Vítores Sancho
+		</li>
+    </ul>
+
+	<h2>Cambios para subir nota</h2>
+    <ul>
+		<li>Administrador: comprobado en el controlador que todas las acciones que puede hacer un admin las realiza un administrador</li>
+		<li>Propuesta: comprobado que todas las acciones relacionadas con modificar una propuesta las realiza su dueño. Comprobado que el que crea una propuesta siempre es una empresa. Comprobadas las acciones sobre una candidatura solo las pueden realizar los afectados por la misma</li>
+    </ul>
+
     <h2>Objetivo</h2>
     <p>
         La función de Influencing consiste en unir a empresas que busquen patrocinadores para sus
@@ -94,6 +110,7 @@
         <li>Fuentes extraídas de <a href="https://github.com/FortAwesome/Font-Awesome">Font-Awesome</a> con licencia <a href="https://fontawesome.com/license">Font Awesome Pro License</a></li>
 
     </ul>
+
 
 </body>
 
