--- a/leeme.html
+++ b/leeme.html
@@ -18,10 +18,14 @@
 		</li>
     </ul>
 
-	<h2>Cambios para subir nota</h2>
+	<h2>Aparte de los cambios del examen, se han realizado los siguientes para subir nota:</h2>
     <ul>
-		<li>Administrador: comprobado en el controlador que todas las acciones que puede hacer un admin las realiza un administrador</li>
-		<li>Propuesta: comprobado que todas las acciones relacionadas con modificar una propuesta las realiza su dueño. Comprobado que el que crea una propuesta siempre es una empresa. Comprobadas las acciones sobre una candidatura solo las pueden realizar los afectados por la misma</li>
+		<li>Administrador: comprobado en el controlador que todas las acciones que puede hacer un admin las realiza un administrador.</li>
+        <li>Propuesta: comprobado que todas las acciones relacionadas con modificar una propuesta las realiza su dueño. Comprobado que el 
+            que crea una propuesta siempre es una empresa. Comprobadas las acciones sobre una candidatura solo las pueden realizar los 
+            afectados por la misma.</li>
+        <li>Busqueda Usuario: si es tu propio perfil en lugar del boton denunciar sale un boton para editar el perfil.</li>
+        <li></li>
     </ul>
 
     <h2>Objetivo</h2>
